--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <body>
     <div class="card">
       <h1>Code Quiz</h1> 
-      <h2 id="countdown"></h2>     
+      <h3 id="countdown"></h3>     
       <button id="startquiz">Start Quiz</button>
       <!-- Do not show quiz section until start quiz button is clicked -->
       <section class="quizsection">
-        <form id="frmcodequiz" method="POST">
-          
+        <form id="frmcodequiz">          
+          <div id="containeruseroptions"></div>
         </form>
       </section>
       <div id="quizstatus"></div>
