updated js to end game with scores and highscore

--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
       <section class="quizsection">
         <form id="frmcodequiz">          
           <div id="containeruseroptions"></div>
+          <div id="userinitialsblock">
+            Enter initials: <input  type="text" name="txtuserinital" id="txtuserinital">
+            <input type="submit" id="btnsubmit" value="Submit">
+          </div>
         </form>
       </section>
-      <div id="quizstatus"></div>
+      
   </div>
     <script src="./assets/js/script.js"></script>
   </body>
