--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             Enter initials: <input  type="text" name="txtuserinital" id="txtuserinital">
             <input type="submit" id="btnsubmit" value="Submit">
           </div>
+          <div id="highscoresection">
+            <button id="btngoback" onclick="location.href='index.html'">Go Back</button>
+            <button id="btnclearhighscore">Clear Highscores</button>
+          </div>
         </form>
       </section>
       
